force-app/main/default/objects/Parenting_Resource__c/Parenting_Resource__c.object-meta.xml
<CustomObject>
    <label>Parenting Resource</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parenting Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>