force-app/main/default/objects/Parenting_Resource__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Parenting Skills</fullName>
            </value>
            <value>
                <fullName>Community Support</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Developmental Milestones</fullName>
            </value>
            <value>
                <fullName>Financial Resources</fullName>
            </value>
            <value>
                <fullName>Legal Guidance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>