force-app/main/default/objects/Parenting_Resource__c/fields/Comments_Count__c.field-meta.xml
<CustomField>
    <fullName>Comments_Count__c</fullName>
    <label>Comments Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>