force-app/main/default/objects/Parenting_Resource__c/fields/File_Attachment__c.field-meta.xml
<CustomField>
    <fullName>File_Attachment__c</fullName>
    <label>File Attachment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>