force-app/main/default/objects/Parenting_Resource__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sleep</fullName>
            </value>
            <value>
                <fullName>Nutrition</fullName>
            </value>
            <value>
                <fullName>Discipline</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Parenting Styles</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Family Activities</fullName>
            </value>
            <value>
                <fullName>Child Behavior</fullName>
            </value>
            <value>
                <fullName>Support Groups</fullName>
            </value>
            <value>
                <fullName>Resources for Special Needs</fullName>
            </value>
            <value>
                <fullName>Financial Planning</fullName>
            </value>
            <value>
                <fullName>Legal Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>