force-app/main/default/objects/Parenting_Resource__c/listViews/Content_Review_Queue_Parenting_Resource.listView-meta.xml
<ListView>
    <fullName>Content_Review_Queue_Parenting_Resource</fullName>
    <filterScope>Queue</filterScope>
    <label>Content Review Queue</label>
    <queue>Content_Review_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>